# chess_engine

./: CMakeLists.txt  README.md
.cache/clangd/index/: board.cpp.6A34620E658E2AD8.idx  board.hpp.75E88B1558FA6DDE.idx  engine.cpp.11689704BC129C74.idx  main.cpp.E44BBC098EC61EB9.idx  move.cpp.2E04A38732177FA5.idx
include/: board.hpp  move.hpp
src/: CMakeLists.txt  board.cpp  main.cpp  move.cpp
